syntax = "proto3";

package userservice;

option go_package = "user-graphql-grpc/proto";

// 用户服务定义
service UserService {
  // 获取用户信息
  rpc GetUserInfo(UserRequest) returns (UserResponse) {}
}

// 用户请求参数
message UserRequest {
  string user_id = 1;
}

// 用户信息响应
message UserResponse {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string sex = 4;
} 